# sahyun_bot

./: .gitignore  LICENSE  README.md  RELEASE  TODO  TRIVIA  config_log_default.ini  config_log_dev.ini  empty_config.ini  install.bat  pyproject.toml  pytest.ini  repl.bat  run.bat
sahyun_bot/: bot.py  bot_modules.py  bot_settings.py  commander.py  commander_settings.py  customsforge.py  customsforge_settings.py  down.py  down_settings.py  elastic.py  elastic_settings.py  irc_bot.py  irc_bot_settings.py  link_job.py  link_job_properties.py  modules.py  the_danger_zone.py  the_loaderer.py  the_loaderer_settings.py  twitchy.py  twitchy_settings.py  users.py  users_settings.py  utils.py  utils_bot.py  utils_elastic.py  utils_logging.py  utils_queue.py  utils_session.py  utils_settings.py
sahyun_bot/commands/: __init__.py  admin.py  channel.py  help.py  request_queue.py  trivial.py
tests/: conftest.py  mock_customsforge.py  mock_irc.py  mock_settings.py  mock_twitch_extras.py  reusable.py  test_commander.py  test_customsforge.py  test_elastic.py  test_sahyun_bot.py  test_the_loaderer.py  test_twitchy.py  test_users.py  test_utils.py  test_utils_logging.py  test_utils_queue.py  test_utils_settings.py
tests/commands/: test_admin.py  test_channel.py  test_help.py  test_request_queue.py
tests/data/: cdlc_0.json  cdlc_1.json  cdlc_2.json  cdlc_2020-05-10.json  cdlc_2020-05-11.json  cdlc_2020-05-12.json  cdlc_2020-05-13.json  cdlc_2020-05-14.json  cdlc_2020-05-15.json  cdlc_3.json  cdlc_4.json  cdlc_5.json
