[tool.poetry]
name = "sahyun-bot"
version = "1"
description = "IRC bot used by Sahyun"
license = "MIT"
authors = ["TheGoodlike13 <henrisssss@hotmail.com>"]
maintainers = ["TheGoodlike13 <henrisssss@hotmail.com>"]
readme = "README.md"
homepage = "https://www.twitch.tv/sahyun"
repository = "https://github.com/TheGoodlike13/sahyun-bot"
keywords = ["irc", "bot", "sahyun", "twitch", "customsforge"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
elasticsearch-dsl = "^7.2.0"
requests_toolbelt = "^0.9.1"
dictdiffer = "^0.8.1"
tldextract = "^2.2.2"
pydle = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
assertpy = "^1.0"
httmock = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
